--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -40,14 +40,16 @@
   background-image: url('../assets/curso/images/tema1/back_1.svg')
   background-size: 1400px
   background-repeat: no-repeat
+  @media screen and ( max-width: 992px )
+    margin-left: -10px
 
 .fondo-2
-  background-image: url('../assets/curso/images/tema2/back_2.svg')
+  background-image: url('../assets/curso/images/tema2/back_2.png')
   background-size: cover
   background-repeat: no-repeat
 
 .fondo-3
-  background-image: url('../assets/curso/images/tema4/back_1.svg')
+  background-image: url('../assets/curso/images/tema4/back_1_1.svg')
   background-size: cover
   background-repeat: no-repeat
 
@@ -57,13 +59,57 @@
   background-repeat: no-repeat
   max-height: 150rem
 
+.fondo-5
+  background-image: url('../assets/curso/images/tema1/back_1.svg')
+  background-size: 1400px
+  background-repeat: no-repeat
+
+.fondo-6
+  background-image: url('../assets/curso/images/tema4/back_3.svg')
+  background-size: cover
+  background-repeat: no-repeat
+  @media screen and ( max-width: 992px )
+    margin-left: -13px
+
+
+.bg_grad-01
+  position: relative
+  row, p, .cajon, .video, .tarjeta
+    position: relative
+  &::before
+    content: ''
+    position: absolute
+    margin: 0
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background-image: url("../assets/curso/images/tema1/back_1.svg")
+    background-repeat: no-repeat
+    background-size: contain
+    @media screen and ( max-width: 420px )
+      margin: 0 -23px
+      width: calc(100% + 46px)
+      top: 20px
 .container-top
   border-radius: 0px 0px 0 0
 .container-bottom
   border-radius: 0 0 20px 20px
 
+.tarjeta 
+  border-radius: 0px
+
 .mg-top-1
   margin-top: -15px
+
+.mg-top-2
+  top: 20rem
+
+.mg-top-3
+  margin-top: -39px
+
+.mg-top-4
+  margin-top: -58px
 
 .tarjeta-blue
   background-color: #EEF0FF !important
@@ -88,7 +134,7 @@
   border-bottom-left-radius: 15px
 
 .jumbotron
-  background-color: #E8EBFF
+  background-color:#A7B4FF
   @media (max-width: 992px)
     width: 380px
     margin-left: 10px
@@ -123,7 +169,20 @@
   border-top-right-radius: 50px
   border-bottom-right-radius: 50px
   border-bottom-left-radius: 50px
+  @media screen and ( max-width: 992px )
+    width: 420px
+    margin-left: -5px
 
+
+.titulo-sexto.color-acento-botones 
+  border-left-color: #F55D8B
+
+.linea-tiempo-d__item__content__title 
+  cursor: pointer
+  font-size: 20px
+
+.m-left
+  left: 50% !important 
 .cs
   overflow-y: hidden
 
