--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -374,14 +374,6 @@
   height: 63px
   cursor: pointer
 
-.tarjeta-up .tarjeta-up__content 
-  position: absolute
-  bottom: -200%
-  width: 100%
-  height: 85%
-  padding: 2rem
-  transition: bottom 0.7s ease-in-out
+.aling-left
   @media (max-width: 992px)
-    height: 98%
-    bottom: -100%
-
+    margin-left: 18px
