--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -377,3 +377,23 @@
 .aling-left
   @media (max-width: 992px)
     margin-left: 18px
+
+.boton *, .boton--sm 
+  color: #FFF
+
+.banner-principal p, .banner-principal h1, .banner-principal h2, .banner-principal h3, .banner-principal h4, .banner-principal h5, .banner-principal h6 
+  color: #fff
+  margin-left: 30px
+
+.boton, .boton--sm 
+  background-color: #F24DC3
+  color: #12263F
+  padding: 10px 15px
+  border-radius: 5px
+  display: inline-block
+  display: inline-flex
+  align-items: center
+  transform: scale(1)
+  margin-left: 30px
+
+
